# muxpilot

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  package.json  pnpm-lock.yaml
.agentvibes/: project.toml  tmux.yml
.github/workflows/: release.yml
apps/web/: mdx-components.tsx  next.config.ts  package.json
apps/web/app/: layout.tsx  page.tsx  styles.css  version.ts
apps/web/app/components/: DemoClip.tsx  FeatureHighlight.tsx  SiteFooter.tsx  SiteHeader.tsx  ThemeToggle.tsx
apps/web/app/docs/: DocFooterNav.tsx  DocsNav.tsx  layout.tsx  nav.ts  page.tsx
apps/web/app/docs/cli/: page.mdx
apps/web/app/docs/configuration/: page.mdx
apps/web/app/docs/installation/: page.mdx
apps/web/app/docs/introduction/: page.mdx
apps/web/public/media/: README.md
apps/web/scripts/: sync-version.mjs
crates/muxpilot/: Cargo.toml
crates/muxpilot/src/: cli_format.rs  default-profiles.toml  demo.rs  discovery.rs  error.rs  fzf.rs  keymap.rs  launcher.rs  lib.rs  main.rs  model.rs  native_picker.rs  native_state.rs  native_view.rs  panel.rs  picker_state.rs  profiles.rs  snapshot.rs  tests.rs  ui_spec.rs  workspace_entries.rs
crates/muxpilot/src/ui/: columns.rs  labels.rs  layout.rs  mod.rs  table.rs  terminal.rs  text.rs  theme.rs
hooks/: README.md  claude-settings.json  codex-hooks.json  muxpilot-hook.sh
marketing/: Makefile  README.md  regen.sh
marketing/scripts/: compose.sh  install-fonts.sh  mock-picker.sh  narrate.sh  paths.sh  real-agent.sh
marketing/tapes/: filter.tape  help.tape  navigate.tape  picker.tape  real-agents.tape  tree.tape
marketing/themes/: muxpilot.tape
(+1 files in other folders)
