[workspace]
members = ["crates/muxpilot"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/muxpilot/muxpilot"

[workspace.dependencies]
crossterm = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
unicode-width = "0.2.2"
