[package]
name = "muxpilot"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Fast tmux workspace picker and agent-aware session menu."

[lib]
name = "muxpilot"
path = "src/lib.rs"

[[bin]]
name = "muxpilot"
path = "src/main.rs"

[dependencies]
crossterm.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
unicode-width.workspace = true
