[package]
name = "muxpilot"
version = "0.1.4"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Fast tmux workspace picker and agent-aware session menu."
homepage = "https://muxpilot.n.yatsyk.com"
readme = "../../README.md"
keywords = ["tmux", "tui", "cli", "tmuxinator", "sessions"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "muxpilot"
path = "src/lib.rs"

[[bin]]
name = "muxpilot"
path = "src/main.rs"

[dependencies]
crossterm.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tokio.workspace = true
unicode-width.workspace = true
